# Comparison-of-the-Execution-Efficiency-of-Heap-Sort-and-Quick-Sort-Algorithms-for-Large-Data-Sets

./: .gitignore  CMakeLists.txt  README.md
data/: data_10.csv  data_100,000.csv
loadFunctions/: loadFunctions.c  loadFunctions.h
main/: main.c
printingWritingFunctions/: printingWritingFunctions.c  printingWritingFunctions.h
sortingFunctions/: sortingFunctions.c  sortingFunctions.h
structDefinition/: structDefinition.h
